k8sMinikube/touhid-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: touhid-app-service
spec:
  selector:
    app: touhid-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
  type: ClusterIP
