k8sMinikube/touhid-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: touhid-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: touhid-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: touhid-app-service
            port:
              number: 8081
